<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/createPlayerLayoutID">
    <EditText
        android:id="@+id/createUsernameID"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/createPlayer_username"
        android:autofillHints="" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/pqChooseBtnID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personalQString"/>
        <TextView
            android:id="@+id/choosePQID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cqLayoutID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">
        <Button
            android:id="@+id/cqChooseBtnID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commonQString" />
        <TextView
            android:id="@+id/chooseCQID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="10dp" />
    </LinearLayout>
</LinearLayout>